fix:z-index

--- a/src/components/Layout/Footer/Footer.css
+++ b/src/components/Layout/Footer/Footer.css
@@ -8,4 +8,5 @@
   flex-wrap: wrap;
   background-color: black;
   opacity: 0.9;
+  z-index: 100;
 }
